<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/circle_white"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/register_back"
        android:layout_gravity="start"/>

    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvAppName"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:textSize="60sp"
        android:textColor="@color/textColorSplash" />
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvRegister_title"
        android:text="@string/register_title"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvRegisterName"
        android:text="@string/register_name"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryVariant"/>
    <EditText
        android:id="@+id/etRegisterName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPersonName"
        android:gravity="center_vertical"
        android:textColor="@color/colorTextSecondary"
        android:paddingStart="10dp"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvRegisterEmail"
        android:text="@string/register_email"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryVariant"/>
    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textEmailAddress"
        android:gravity="center_vertical"
        android:textColor="@color/colorTextSecondary"
        android:paddingStart="10dp"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvRegisterUserName"
        android:text="@string/register_username"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryVariant"/>
    <EditText
        android:id="@+id/etRegisterUserName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPersonName"
        android:gravity="center_vertical"
        android:textColor="@color/colorTextSecondary"
        android:paddingStart="10dp"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvRegisterPassword"
        android:text="@string/register_password"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryVariant"/>
    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:textColor="@color/colorTextSecondary"
        android:paddingStart="10dp"
        android:paddingEnd="12dp"
        android:drawableEnd="@drawable/ic_eye_closed"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvRegisterRepeatPassword"
        android:text="@string/register_repeat_password"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryVariant"/>
    <EditText
        android:id="@+id/etRegisterRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:textColor="@color/colorTextSecondary"
        android:paddingStart="10dp"
        android:paddingEnd="12dp"
        android:drawableEnd="@drawable/ic_eye_closed"/>

    <LinearLayout
        style="@style/viewCustom"
        android:id="@+id/tvRemember"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbTerms"
            android:text="@string/register_read"
            android:textColor="@color/colorTextSecondary"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp"
            android:layout_marginStart="40dp"
            android:buttonTint="@color/colorAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTermsAndConditions"
            android:text="@string/register_terminos"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/colorPrimaryVariant"/>

    </LinearLayout>

    <Button
        style="@style/viewCustom"
        android:id="@+id/btRegisterLogin"
        android:gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/register_button"
        android:textColor="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        style="@style/viewCustom"
        android:id="@+id/llnewAccount"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tvRegisterAccount"
            android:text="@string/register_account"
            android:textColor="@color/colorTextSecondary"
            android:fontFamily="@font/roboto_regular"
            android:textSize="15sp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvRegisterLogin"
            android:text="@string/register_login_here"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorPrimaryVariant"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>


</LinearLayout>