<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/ebook_logo"
        android:layout_marginTop="40dp"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvLogin"
        android:text="@string/login_title"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="30dp"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvSubtitleLogin"
        android:text="@string/login_subtitle"
        android:gravity="center_horizontal"
        android:textSize="10sp"
        android:textColor="@color/colorTextSecondary" />
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvEmail"
        android:text="@string/login_email"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorPrimaryVariant"/>
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textEmailAddress"
        android:gravity="center_vertical"
        android:textColor="@color/colorTextSecondary"
        android:paddingStart="10dp"/>
    <TextView
        style="@style/viewCustom"
        android:id="@+id/tvPassword"
        android:text="@string/login_password"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimaryVariant"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        android:textColor="@color/colorTextSecondary"
        android:paddingStart="10dp"
        android:paddingEnd="12dp"
        android:drawableEnd="@drawable/ic_eye_closed"/>

    <LinearLayout
        style="@style/viewCustom"
        android:id="@+id/tvRemember"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbRemember"
            android:text="@string/login_remember_me"
            android:textColor="@color/colorTextSecondary"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp"
            android:layout_marginStart="40dp"
            android:buttonTint="@color/colorAccent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForgotPassword"
            android:text="@string/login_forgot_password"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12sp"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <Button
        style="@style/viewCustom"
        android:id="@+id/btLogin"
        android:gravity="center"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/login_button_login"
        android:textColor="@color/white"/>
    <com.google.android.gms.common.SignInButton
        style="@style/viewCustom"
        android:id="@+id/btGoogle"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="20dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        style="@style/viewCustom"
        android:id="@+id/llnewAccount"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/tvNewAccount"
            android:text="@string/login_no_account"
            android:textColor="@color/colorTextSecondary"
            android:fontFamily="@font/roboto_regular"
            android:textSize="15sp"
            android:layout_marginStart="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvMakeAccount"
            android:text="@string/login_create_account"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorPrimaryVariant"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>


</LinearLayout>